--- a/강의자료/5주차/session3_프로젝트_part3_from-to 분석.ipynb
+++ b/강의자료/5주차/session3_프로젝트_part3_from-to 분석.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "id": "k-CxGUjC9bEM"
    },
@@ -33,6 +33,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from itertools import permutations\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "!sudo apt-get install -y fonts-nanum\n",
     "!sudo fc-cache -fv\n",
@@ -1146,15 +1147,6 @@
    ],
    "source": [
     "df.loc[df[\"Result\"].idxmin()]['Distance Permutation']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
    ]
   },
   {
